<resources>
    <string name="app_name">Reminder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="add_event">Add event</string>
    <string name="cancel">Cancel</string>
    <string name="event">Event</string>
    <string name="description">Description</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="changed_event_cancel_title">Changes cancellation</string>
    <string name="changed_event_cancel_message">Cancel changes and exit?</string>
    <string name="delete_event_title">Event deletion</string>
    <string name="delete_event_message">Delete event and exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="blank_description_error">Description should not be blank</string>
</resources>