<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.positivehc.reminder.presentation.detail.DetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.detail.DetailFragment">

        <ImageView
            android:id="@+id/iv_delete"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/cancel"
            app:layout_constraintEnd_toStartOf="@+id/iv_ok"
            app:layout_constraintStart_toEndOf="@+id/iv_cancel"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_delete_24" />

        <TextView
            android:id="@+id/tv_event_time_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/time"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/tv_event_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_event_date" />

        <TextView
            android:id="@+id/tv_event_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="8dp"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_event_time_label"
            app:layout_constraintTop_toBottomOf="@+id/tv_event_date"
            app:time="@{viewModel.event.eventDateTime}" />

        <TextView
            android:id="@+id/tv_event_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textSize="24sp"
            app:date="@{viewModel.event.eventDateTime}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_event_date_label"
            app:layout_constraintTop_toBottomOf="@+id/et_description" />

        <ImageView
            android:id="@+id/iv_cancel"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/cancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_close_24" />

        <ImageView
            android:id="@+id/iv_ok"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_done_24" />

        <TextView
            android:id="@+id/tv_event_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/event"
            android:textSize="48sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_ok" />

        <EditText
            android:id="@+id/et_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:autofillHints="false"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:text="@={viewModel.event.description}"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_event_title" />

        <TextView
            android:id="@+id/tv_event_date_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/date"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/tv_event_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>